--- a/Sales.API/appsettings.json
+++ b/Sales.API/appsettings.json
@@ -1,5 +1,8 @@
 {
-  "Logging": {
+
+    "ConnectionStrings": { "DockerConnection": "Data Source=DESKTOP-TJ48H3B;Initial Catalog=Sales;User ID=SA;Password=123;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" },
+    
+    "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
