Creación de componentes Post, Get, Put y Delete en la API y en Blazor (Web)

--- a/Blazor.WEB/Blazor.WEB.csproj
+++ b/Blazor.WEB/Blazor.WEB.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Shared\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Sales.Shared\Sales.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
